# KG-perturbator

./: .gitignore  README.md  Taskfile.yml  docker-requirements.txt  envexample  pyproject.toml  requirements.txt
configs/: config.yaml  llm_config.yaml
kg_perturbator/: __init__.py  cli.py  conversion.py  kg_to_entity_alignment_files.py  perturb_and_generate_alignment.py  perturbator.py  strip_KG.py  utils.py
kg_perturbator/llm_integrations/: azure_llm.py  base_llm_wrapper.py  huggingface_llm.py  provider_factory.py  testing_llm_implementation.py  vertex_llm.py
